--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         const testimonialAuthorRoleElem = document.querySelector('.testimonial__author-role');
         const testimonialImageElem = document.querySelector('.testimonial__image');
 
-        let currentIndex = 1;
+        // Default testimonial
+        let currentIndex = 0;
+
         uiUpdateTestimonial(testimonials[currentIndex]);
 
         // Update testimonial content
